# TypIx

./: .env.build.example  .gitignore  build-signed.sh  index.html  package-lock.json  package.json  textkorrektur-tool-konzept.md  vite.config.ts
scripts/: gen-icon.mjs
src/: App.tsx  Correction.tsx  Settings.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  ollama.rs  settings.rs  tray.rs
src/components/: Diff.tsx
src/lib/: correct.ts  diff.ts
